# ICE_Climber

ICE_Client/: CMakeLists.txt  ICE_Game.c  ICE_Game.h  ICE_Gui.c  ICE_Json.c  ICE_Json.h  main.c  manuel 2 player screen.txt  note.txt
ICE_Client/ICE_Headers/: ICE_Game.h  ICE_Json.h  ICE_Socket.h
ICE_Client/ICE_Sources/: ICE_Game.c  ICE_Json.c  ICE_Socket.c  ICE_Variables.c  main.c
ICE_Server/: Character.java  Client.java  Game.java  Thread.java
ICE_Server/src/ICE_Logic/: Character.java  Game.java  SpawnManager.java
ICE_Server/src/ICE_Server/: Character.java  Game.java  Server.java  SpawnManager.java  Thread.java
